--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,10 +36,6 @@
                         <a class="nav-link" href="index.html#contact">Kontakt</a>
                     </li>
                 </ul>
-                <button class="theme-switch" aria-label="Theme Switch">
-                    <i class="fas fa-sun"></i>
-                    <i class="fas fa-moon"></i>
-                </button>
             </div>
         </div>
     </nav>
