--- a/index.html
+++ b/index.html
@@ -36,18 +36,28 @@
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="images/logo.png" alt="AGS Gesundheitszentrum Logo" height="50">
+                    <img src="images/logo.png" alt="AGS Gesundheitszentrum Logo" class="logo">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="leistungen.html">Leistungen</a></li>
-                        <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt</a></li>
-                        <li class="nav-item"><a class="nav-link" href="termin.html">Termin</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#services">Leistungen</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">Über uns</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="termin.html">Termin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Kontakt</a>
+                        </li>
                     </ul>
                 </div>
             </div>
