Add team section and update service images with stock photos

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="row">
                     <div class="col-md-4 mb-4">
                         <div class="service-card">
-                            <img src="images/service1.jpg" class="service-image" alt="Physiotherapie">
+                            <img src="https://www.bing.com/th?id=OIP.6795d8ad6a41ce16f75aa58ec423e0edL&w=600" class="service-image img-fluid" alt="Physiotherapie">
                             <h3>Physiotherapie</h3>
                             <p>Professionelle physiotherapeutische Behandlungen für verschiedene Beschwerden:</p>
                             <ul>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="service-card">
-                            <img src="images/service2.jpg" class="service-image" alt="Massage">
+                            <img src="https://www.bing.com/th?id=OIP.h9nWZI_yA2lU3eH6gHUBwQHaE8&w=600" class="service-image img-fluid" alt="Massage">
                             <h3>Massage</h3>
                             <p>Entspannende und heilende Massagetherapien:</p>
                             <ul>
@@ -105,7 +105,7 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="service-card">
-                            <img src="images/service3.jpg" class="service-image" alt="Fitness">
+                            <img src="https://www.bing.com/th?id=OIP.YQqrI6nR-rQrS_Cs8HXXXAHaE8&w=600" class="service-image img-fluid" alt="Fitness">
                             <h3>Fitness & Training</h3>
                             <p>Individuelles Training und Beratung:</p>
                             <ul>
@@ -114,6 +114,29 @@
                                 <li>Präventionskurse</li>
                                 <li>Ernährungsberatung</li>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Team Section -->
+        <section id="team" class="py-5">
+            <div class="container">
+                <h2 class="text-center mb-5">Unser Team</h2>
+                <div class="row">
+                    <div class="col-md-6 mb-4">
+                        <div class="team-card">
+                            <img src="https://www.bing.com/th?id=OIP.th-iPsQUKYFnGGTXKxhAngHaLH&w=200" class="team-image img-fluid rounded-circle" alt="Gerhard Stasiczek">
+                            <h3>Gerhard Stasiczek</h3>
+                            <p class="position">Therapeut</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <div class="team-card">
+                            <img src="https://www.bing.com/th?id=OIP.h9J8YvO6NDDqsF5BZXYXmQHaLH&w=200" class="team-image img-fluid rounded-circle" alt="Sekretärin">
+                            <h3>Maria Wagner</h3>
+                            <p class="position">Sekretärin</p>
                         </div>
                     </div>
                 </div>
